; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-metaprog/src/extr_metaprog.c_mrb_mod_included_modules.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-metaprog/src/extr_metaprog.c_mrb_mod_included_modules.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RClass = type { i64, %struct.RClass*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@MRB_TT_ICLASS = common dso_local global i64 0, align 8
@MRB_TT_MODULE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_mod_included_modules to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_mod_included_modules(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.RClass*, align 8
  %7 = alloca %struct.RClass*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.RClass* @mrb_class_ptr(i32 %8)
  store %struct.RClass* %9, %struct.RClass** %6, align 8
  %10 = load %struct.RClass*, %struct.RClass** %6, align 8
  store %struct.RClass* %10, %struct.RClass** %7, align 8
  %11 = load %struct.RClass*, %struct.RClass** %7, align 8
  %12 = call i32 @MRB_CLASS_ORIGIN(%struct.RClass* %11)
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @mrb_ary_new(i32* %13)
  store i32 %14, i32* %5, align 4
  br label %15

15:                                               ; preds = %45, %2
  %16 = load %struct.RClass*, %struct.RClass** %6, align 8
  %17 = icmp ne %struct.RClass* %16, null
  br i1 %17, label %18, label %49

18:                                               ; preds = %15
  %19 = load %struct.RClass*, %struct.RClass** %6, align 8
  %20 = load %struct.RClass*, %struct.RClass** %7, align 8
  %21 = icmp ne %struct.RClass* %19, %20
  br i1 %21, label %22, label %45

22:                                               ; preds = %18
  %23 = load %struct.RClass*, %struct.RClass** %6, align 8
  %24 = getelementptr inbounds %struct.RClass, %struct.RClass* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @MRB_TT_ICLASS, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %45

28:                                               ; preds = %22
  %29 = load %struct.RClass*, %struct.RClass** %6, align 8
  %30 = getelementptr inbounds %struct.RClass, %struct.RClass* %29, i32 0, i32 2
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @MRB_TT_MODULE, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %36, label %44

36:                                               ; preds = %28
  %37 = load i32*, i32** %3, align 8
  %38 = load i32, i32* %5, align 4
  %39 = load %struct.RClass*, %struct.RClass** %6, align 8
  %40 = getelementptr inbounds %struct.RClass, %struct.RClass* %39, i32 0, i32 2
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** %40, align 8
  %42 = call i32 @mrb_obj_value(%struct.TYPE_2__* %41)
  %43 = call i32 @mrb_ary_push(i32* %37, i32 %38, i32 %42)
  br label %44

44:                                               ; preds = %36, %28
  br label %45

45:                                               ; preds = %44, %22, %18
  %46 = load %struct.RClass*, %struct.RClass** %6, align 8
  %47 = getelementptr inbounds %struct.RClass, %struct.RClass* %46, i32 0, i32 1
  %48 = load %struct.RClass*, %struct.RClass** %47, align 8
  store %struct.RClass* %48, %struct.RClass** %6, align 8
  br label %15

49:                                               ; preds = %15
  %50 = load i32, i32* %5, align 4
  ret i32 %50
}

declare dso_local %struct.RClass* @mrb_class_ptr(i32) #1

declare dso_local i32 @MRB_CLASS_ORIGIN(%struct.RClass*) #1

declare dso_local i32 @mrb_ary_new(i32*) #1

declare dso_local i32 @mrb_ary_push(i32*, i32, i32) #1

declare dso_local i32 @mrb_obj_value(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
